Add I18N support and fix css style

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,3 +1,43 @@
 {
-  "locale": "English"
+  "locale": "English",
+  "stakingRewardPool": "Staking Reward Pool",
+  "stakingTotal": "Staking Total",
+  "aboutKhala": "About Khala",
+  "learnSlotAuction": "Learn Slot Auction",
+  "affiliationProgram": "Affiliation Program",
+  "connectWallet": "Connect Wallet",
+  "rank": "Rank",
+  "KSMAccount": "KSM Account",
+  "contribute": "Contribute",
+  "contributeReward": "Contribute Reward",
+  "participantsIntroduced": "Participants Introduced",
+  "affiliationReward": "Affiliation Reward",
+  "myRanking": "My Ranking",
+  "enterAnContributeAmount": "Enter An Contribute Amount",
+  "balance": "Balance",
+  "max": "Max",
+  "calculate": "Calculate",
+  "contributingReward": "Contributing Reward",
+  "contributingIncome": "Contributing Income",
+  "phaPrice": "PHA Price",
+  "stake": "Stake",
+  "phalaStakeAPY": "Phala Stake APY",
+  "KSMAPY": "KSM APY",
+  "KSMPrice": "KSM Price",
+  "stakingReward": "Staking Reward",
+  "stakingIncome": "Staking Income",
+  "moreIncome": "More Income",
+  "introducer": "Introducer",
+  "fillIntroducer": "Fill Introducer",
+  "yourContribute": "Your Contribute",
+  "yourTotalReward": "Your Total Reward",
+  "participantsIntroduced": "Participants Introduced",
+  "affiliationReward": "Affiliation Reward",
+  "contributeDetails": "Contribute Details",
+  "more": "More",
+  "time": "Time",
+  "yourContribute": "Your Contribute",
+  "yourReward": "Your Reward",
+  "rewardVest": "Reward Vest",
+  "rewardVestTip": "If Phala wins the Slot Auction, rewards will be distributed according to the following time points and proportions. If it fails, you can unbond all your bonds immediately after the Auction ends."
 }
