--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -1,3 +1,43 @@
 {
-  "locale": "中文"
+  "locale": "中文",
+  "stakingRewardPool": "质押奖池",
+  "stakingTotal": "质押总量",
+  "aboutKhala": "关于Phala",
+  "learnSlotAuction": "了解卡槽拍卖",
+  "affiliationProgram": "邀请奖励",
+  "connectWallet": "连接钱包",
+  "rank": "排名",
+  "KSMAccount": "KSM账户",
+  "contribute": "质押量",
+  "contributeReward": "质押奖励",
+  "participantsIntroduced": "邀请人数",
+  "affiliationReward": "邀请奖励",
+  "myRanking": "我的排名",
+  "enterAnContributeAmount": "输入质押量",
+  "balance": "余额",
+  "max": "最大",
+  "calculate": "计算",
+  "contributingReward": "为PHA质押奖励",
+  "contributingIncome": "为Phala质押收益",
+  "phaPrice": "PHA价格",
+  "stake": "质押",
+  "phalaStakeAPY": "Phala质押年化",
+  "KSMAPY": "KSM质押年化",
+  "KSMPrice": "KSM价格",
+  "stakingReward": "KSM抵押奖励",
+  "stakingIncome": "KSM抵押收益",
+  "moreIncome": "为PHA质押的额外收益",
+  "introducer": "邀请人",
+  "fillIntroducer": "填写邀请人获得PHA奖励(选填)",
+  "yourContribute": "您的质押总量",
+  "yourTotalReward": "您的总奖励",
+  "participantsIntroduced": "邀请人数",
+  "affiliationReward": "邀请人数",
+  "contributeDetails": "质押明细",
+  "more": "查看全部",
+  "time": "时间",
+  "yourContribute": "您的质押",
+  "yourReward": "您的奖励",
+  "rewardVest": "结算发放",
+  "rewardVestTip": "如果Phala在本期拍卖中赢得卡槽，将按如下时间点及比例发放奖励。如果失败，您可以在拍卖结束后立即全部解锁您的质押。"
 }
