--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -29,7 +29,7 @@
   "fillIntroducer": "填写邀请人获得PHA奖励(选填)",
   "yourTotalReward": "您的总奖励",
   "participantsIntroduced": "邀请人数",
-  "affiliationReward": "邀请人数",
+  "affiliationReward": "邀请奖励",
   "contributeDetails": "质押明细",
   "more": "查看全部",
   "time": "时间",
