update: nav link

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,7 +11,9 @@
   "stakingRewardPool": "Staking Reward Pool",
   "stakingTotal": "Staking Total",
   "aboutKhala": "About Khala",
+  "aboutKhalaLink": "https://phala.network/khala",
   "learnSlotAuction": "Learn Slot Auction",
+  "learnSlotAuctionLink": "https://medium.com/phala-network/phalas-kusama-slot-auction-strategy-34cb93e07f3a",
   "affiliationProgram": "Affiliation Program",
   "connectWallet": "Connect Wallet",
   "rank": "Rank",
