--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -11,7 +11,9 @@
   "stakingRewardPool": "质押奖池",
   "stakingTotal": "质押总量",
   "aboutKhala": "关于Phala",
+  "aboutKhalaLink": "https://phala.network/zh/khala",
   "learnSlotAuction": "了解卡槽拍卖",
+  "learnSlotAuctionLink": "https://mp.weixin.qq.com/s/1iaLE_8Q2LjlgUsxW6LtWA",
   "affiliationProgram": "邀请奖励",
   "connectWallet": "连接钱包",
   "rank": "排名",
