--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -35,8 +35,8 @@
   "stakingReward": "Staking Reward",
   "stakingIncome": "Staking Income",
   "moreIncome": "More Income",
-  "introducer": "Introducer",
-  "fillIntroducer": "Fill Introducer",
+  "introducer": "Invitor",
+  "fillIntroducer": "Fill Invitor",
   "yourTotalReward": "Your Total Reward",
   "participantsIntroduced": "Participants Introduced",
   "affiliationReward": "Affiliation Reward",
