--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -34,7 +34,7 @@
   "KSMPrice": "KSM Price",
   "stakingReward": "Staking Reward",
   "stakingIncome": "Staking Income",
-  "moreIncome": "More Income",
+  "moreIncome": "More Income than Staking",
   "introducer": "Invitor",
   "fillIntroducer": "Fill Invitor",
   "yourTotalReward": "Your Total Reward",
