--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -34,7 +34,7 @@
   "KSMPrice": "KSM价格",
   "stakingReward": "KSM抵押奖励",
   "stakingIncome": "KSM抵押收益",
-  "moreIncome": "为PHA质押的额外收益",
+  "moreIncome": "超抵押收益",
   "introducer": "邀请人",
   "fillIntroducer": "填写邀请人获得PHA奖励(选填)",
   "yourTotalReward": "您的总奖励",
