update: inviter UI & i18n

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -36,7 +36,7 @@
   "stakingIncome": "Staking Income",
   "moreIncome": "More Income than Staking",
   "introducer": "Invitor",
-  "fillIntroducer": "Fill Invitor",
+  "fillIntroducer": "Fill in the introducer to get xPHA additional reward",
   "yourTotalReward": "Your Total Reward",
   "participantsIntroduced": "Participants Introduced",
   "affiliationReward": "Affiliation Reward",
