--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -62,5 +62,6 @@
   "lastUpdated": "Last updated: Month Day, Hour Minute",
   "priceLastUpdated": "Price last updated: Month Day, Hour Minute",
   "coinGechoLink": "https://www.coingecko.com/en/coins/phala-network",
-  "stakingrewardsLink": "https://www.stakingrewards.com/earn/kusama"
+  "stakingrewardsLink": "https://www.stakingrewards.com/earn/kusama",
+  "pleaseSupportAtLeast": "Please support at least 0.1 KSM"
 }
