--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -62,5 +62,6 @@
   "priceLastUpdated": "价格最后更新:",
   "lastUpdated": "最后更新:",
   "coinGechoLink": "https://www.coingecko.com/en/coins/phala-network",
-  "stakingrewardsLink": "https://www.stakingrewards.com/earn/kusama"
+  "stakingrewardsLink": "https://www.stakingrewards.com/earn/kusama",
+  "pleaseSupportAtLeast": "请至少支持 0.1 KSM"
 }
