--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -73,5 +73,48 @@
   "thanksForSubscribing": "Thanks for subscribing!",
   "emailInputPlaceholder": "Enter your email address",
   "isAlreadySubscribed": "Email is already subscribed",
-  "copySuccess": "Copy Success"
+  "copySuccess": "Copy Success",
+  "q1": "What is Kusama Parachain Slot Auctions？",
+  "a1-1": "The Kusama Network is composed of a relay chain and a number of parachains. The slot is the interface between the parachain and the relay chain. The number is limited, and the project needs to be obtained through KSM bidding.",
+  "a1-2": "The auction adopts an improved “candle auction“, that is, the first 2 days are the Open Period, and the next 5 days are the Ending Period. The auction may end at any time during the Ending period. Only the item with the highest bid before the end of the auction will win. It is estimated that each auction will last 7 days and there will be 5 auctions in total.",
+  "a1-3": "The Polkadot Slot Auction that will start in the future is similar. The project bids DOT to bid for the slots, but the bidding time, bidding period, and number of slots are different from Kusama.",
+  "q2": "Why does Khala bid for Parachain Slots?",
+  "a2": "After obtaining the slot, Khala will be able to share the security and consensus of the Kusama network, and can communicate with other parachains.",
+  "q3": "Why does Khala create a KSM Crowdloan?",
+  "a3": "Crowdloan is a way for Khala to obtain the KSM required by the auction, and it is an important part of Khala's launch in Kusama. Khala does not need to spend too much resources to obtain the funds for the lease of the slot. At the same time, it can effectively distribute tokens to community who support Khala and complete the fair distribution of tokens.",
+  "q4": "Why should I participate in Khala's Crowdloan?",
+  "a4": "Crowdloan is a low-cost way to obtain K-PHA tokens. You only need to lock the KSM for a fixed period of time, and you don't need to spend any money to get K-PHA tokens. 1 KSM can get 100 K-PHA.",
+  "q5": "What is the process of Khala Parachain Slot auction?",
+  "a5-1": "1. You need to prepare KSM in advance. It takes 7 days to unlock KSM to take effect;",
+  "a5-2": "2. Users can register and invite friends through the invitation link;",
+  "a5-3": "3. The first slot of Kusama Parachain is open for bidding;",
+  "a5-4": "4. The second slot is open for bidding, Khala Crowdloan is created, and users can contribute KSM for Khala;",
+  "a5-5": "5. Khala successfully take the second slot;",
+  "a5-6": "6. Khala launch Kusama Parachain. ",
+  "q6": "When will Khala's crowdloan start?",
+  "a6": "Khala will create the crowdloan when the second slot starts to auction, at this time you can start to contribute KSM for Khala. The end time of the crowdloan will be determined by Khala's auction situation. During the auction, your KSM will be locked.",
+  "q7": "Where can I participate in Khala crowd lending?",
+  "a7-1": "1. You can participate directly on this page (on-chain);",
+  "a7-2": "2. You can participate in cooperative institutions such as exchanges (off-chain);",
+  "a7-3": "3. You can participate directly through the polkadot.js UI (on-chain);",
+  "a7-4": "4. You can participate through a third-party DApp (on-chain). ",
+  "q8": "Whose account is the KSM I contributed locked to?",
+  "a8": "Your KSM will be locked in the control module of the Kusama relay chain through a special transaction. It is not transferred to the Khala account. You can still see this part of the funds in the account, and Khala will never be able to contact it.",
+  "q9": "How long will my KSM be locked?",
+  "a9": "In the Kusama Network, the parachain slot lease cycle is 8 periods, and each periods is 6 weeks. Khala will lease the longest period of 48 weeks. When Khala's bid is successful, your KSM will be locked for 48 weeks starting from Khala's auction of the slot. When the Khala bid fails, your KSM will be unlocked and refunded after the crowdloan ends.",
+  "q10": "How many K-PHA rewards can I get for participating in the Khala Crowdloan?",
+  "a10": "If the auction is successful, you will get 100 K-PHA as a reward for every KSM you contribute for Khala. A total of 15 million K-PHA will be released on a first-come, first-served basis. If the bid fails, there will be no reward.",
+  "q11": "What is the referral reward?",
+  "a11-1": "Khala will provide users with generous referral rewards. Before starting the auction, you can register in advance and bond the referral relationship with your friends. Once your friends lock KSM, you and your friends can get referral rewards.",
+  "a11-2": "Example: After user A invites user B to participate in the slot auction, both A and B will receive 0.5% of the support reward of user B as an additional invitation reward. ",
+  "q12": "How to receive rewards?",
+  "a12": "Rewards will be automatically distributed to your locked KSM account. Among them, 34% of the rewards will be released immediately after connecting to the parachain, and the remaining 66% of the rewards will be released linearly in 11 months.",
+  "q13": "Is there a limit on the maximum and minimum lock amount?",
+  "a13": "The single minimum lock amount is 0.1 KSM, and the maximum lock amount is 150,000 KSM cumulatively.",
+  "q14": "Can I make contribute multiple times?",
+  "a14": "Yes",
+  "q15": "What is the relationship between K-PHA and PHA?",
+  "a15": "K-PHA and PHA are the same token, which can be exchanged 1:1 after the Phala cross-chain bridge goes online. Because they are deployed in different blockchain networks, they have different names.",
+  "q16": "Where can I track the crowdloan situation?",
+  "a16": "After the crowdloan starts, you can see Khala's crowdloan quantity, crowd lenders, total rewards, current bidding situation and other information in this panel."
 }
