--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -73,5 +73,48 @@
   "thanksForSubscribing": "感谢订阅！",
   "emailInputPlaceholder": "输入您的邮箱",
   "isAlreadySubscribed": "该邮箱已经订阅",
-  "copySuccess": "复制成功"
+  "copySuccess": "复制成功",
+  "q1": "什么是 Kusama 平行链插槽拍卖？",
+  "a1-1": "Kusama 网络由中继链和若干平行链组成，插槽是平行链与中继链连接的接口，数量有限，需由项目通过出价 KSM 竞拍获得。",
+  "a1-2": "拍卖采用经过改良的“蜡烛拍卖”，即前 2 天为开放出价期，后 5 天为随机结束期。结束期期间随时可能结束竞拍。只有在结束竞拍前出价最高的项目才能获胜。预计每场拍卖持续 7 天，共有 5 场拍卖。",
+  "a1-3": "将于后续开始的 Polkadot 插槽拍卖同理，由项目出价 DOT 竞拍插槽，但竞拍时间、竞拍周期、插槽数量与 Kusama 不同。",
+  "q2": "Khala 为何要竞拍平行链插槽？",
+  "a2": "获得插槽后，Khala 将能共享 Kusama 网络的安全性和共识，并可以与其他平行链通信。",
+  "q3": "Khala 为何要发起 KSM 众贷（Crowdloan）？",
+  "a3": "众贷是 Khala 获得竞拍所需的 KSM 的一种方式，是 Khala 在 Kusama 中启动的重要环节。Khala 无需耗费过多资源便能获得租赁插槽的资金。同时能够有效地将代币分发给支持 Khala 的社区成员，完成代币的公平分配。",
+  "q4": "我为什么要参与 Khala 的众贷？",
+  "a4": "众贷是低成本获得 K-PHA 代币的方式。您只需要将 KSM 锁定固定时间，便不用花费任何金额就获得 K-PHA 代币，1 枚 KSM 可获得 100 枚 K-PHA。",
+  "q5": "Khala 平行链插槽拍卖流程是怎样的？",
+  "a5-1": "1、您需提前准备 KSM。解锁和解除绑定 KSM 需要 7 日才可生效；",
+  "a5-2": "2、用户可通过邀请链接进行注册和邀请好友；",
+  "a5-3": "3、Kusama平行链首个插槽开启竞拍；",
+  "a5-4": "4、第二个插槽开启竞拍，Khala众贷开启，用户可为Khala锁定KSM；",
+  "a5-5": "5、Khala成功拍下第二个插槽；",
+  "a5-6": "6、Khala上线Kusama平行链。",
+  "q6": "Khala 的众贷将于何时开始？",
+  "a6": "Khala 将在第二个插槽开始拍卖时开放众贷模块，此时您可开始为 Khala 锁定 KSM。众贷结束时间将由 Khala 竞拍情况决定。在竞拍期间，您的 KSM 将被锁定。",
+  "q7": "我可以在哪里参与 Khala 众贷？",
+  "a7-1": "1、您可在本页面直接参与（链上）；",
+  "a7-2": "2、您可以在合作机构如交易所参与（链下）；",
+  "a7-3": "3、您可以直接通过 polkadot.js UI 参与（链上）；",
+  "a7-4": "4、您可通过第三方 DApp 参与（链上）；",
+  "q8": "我提供的 KSM 锁定到谁的账户中了呢？",
+  "a8": "您的 KSM 将通过一次特殊的交易锁定在 Kusama 中继链的控制模块中，并非转到了 Khala 账户，您仍然可以在账户中看到这部分资金，Khala 永远无法接触。",
+  "q9": "我的 KSM 将被锁定多久呢？",
+  "a9": "在 Kusama 网络，平行链插槽租赁周期为 8 个周期，每个周期为 6 周。Khala将租赁最长的周期，即 48 周。当 Khala 竞拍成功后，您的 KSM 将从 Khala 拍下插槽开始被锁定 48 周。当 Khala 竞拍失败后，您的 KSM 将在众贷结束后解锁返还。",
+  "q10": "参与 Khala 众贷，能获得多少 K-PHA 奖励呢?",
+  "a10": "若竞拍成功，您每为 Khala 锁定一个 KSM，将获得 100 K-PHA 作为奖励。总计将释放 1500 万 K-PHA，先到先得。若竞拍失败，将无奖励。",
+  "q11": "邀请奖励是多少？",
+  "a11-1": "Khala 将为用户提供丰厚的邀请奖励。在开始竞拍前您可以提前注册并与好友绑定邀请关系，您的好友一旦锁定 KSM，您和您的好友均可获得邀请奖励。",
+  "a11-2": "举例：A 用户邀请 B 用户参与插槽拍卖后，A、B 双方都会获得 B 用户支持奖励的 0.5 % 作为额外邀请奖励。",
+  "q12": "怎么领取奖励呢？",
+  "a12": "奖励将自动发放至您锁定 KSM 的账户中。其中 34% 的奖励将在接入平行链后立即释放，剩余 66% 的奖励将由 11 个月线性释放。",
+  "q13": "有最大、最小锁定量限制吗？",
+  "a13": "单次最小锁定量为 0.1 KSM，最大锁定量累计为 15 万 KSM。",
+  "q14": "我可以支持多次吗？",
+  "a14": "可以",
+  "q15": "K-PHA 与 PHA 是什么关系？",
+  "a15": "K-PHA 与 PHA 为同一种代币，可在 Phala 跨链桥上线后进行 1:1 兑换。由于部署在不同区块链网络，因此名称不同。",
+  "q16": "我可以在哪里追踪众贷情况呢？",
+  "a16": "众贷开始后，你可以在本面板中看到 Khala 的众贷数量、众贷人数、总获得奖励、当前竞拍情况等信息。"
 }
