--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -78,6 +78,8 @@
   "landingPageDescription": "Please bookmark this page, Khala will open Crowdloan on this page when the second Kusama slot is released.",
   "landingPageReferralRewards": "Referral Rewards",
   "subscribeToOurCrowdloanNews": "Subscribe to our Crowdloan news",
+  "basicRewards": "Basic Rewards",
+  "basicRewardsText": "In Khala’s crowdloan, every KSM that supports Khala in the Kusama slot auction through the Crowdloan will be entitled to 100 PHA as rewards (PHA: KSM = 100:1).",
   "q1": "What is Kusama Parachain Slot Auctions？",
   "a1-1": "The Kusama Network is composed of a relay chain and a number of parachains. The slot is the interface between the parachain and the relay chain. The number is limited, and the project needs to be obtained through KSM bidding.",
   "a1-2": "The auction adopts an improved “candle auction“, that is, the first 2 days are the Open Period, and the next 5 days are the Ending Period. The auction may end at any time during the Ending period. Only the item with the highest bid before the end of the auction will win. It is estimated that each auction will last 7 days and there will be 5 auctions in total.",
