--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -80,6 +80,15 @@
   "subscribeToOurCrowdloanNews": "Subscribe to our Crowdloan news",
   "basicRewards": "Basic Rewards",
   "basicRewardsText": "In Khala’s crowdloan, every KSM that supports Khala in the Kusama slot auction through the Crowdloan will be entitled to 100 PHA as rewards (PHA: KSM = 100:1).",
+  "process": "Process",
+  "processT1": "Prep your KSM",
+  "processC1": "Unbond your KSM soon if they’re already bonded! (At least 7 days before the Crowdloan starts).",
+  "processT2": "The 2nd slot",
+  "processC2": "Khala Network will join the Kusama slot auction when the second slot is released. when the 2nd slot begins, you can join on this page.",
+  "processT3": "Khala win auction",
+  "processC3": "When Khala wins a slot and runs as parachain successfully, 34% of the PHA in the reward pool will be vested to contributors’ addresses immediately. The remaining 66% will be vested monthly over 11 months.",
+  "processT4": "Unlock KSM",
+  "processC4": "If Khala wins, Crowdloaned KSM will be unlocked at the end of the lease period (48 weeks from the auction Khala wins).",
   "waysToSupport": "Ways to support",
   "crowdloanDappThisPage": "Crowdloan Dapp (This Page)",
   "toBeAnnounced": "To be announced",
