--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -80,6 +80,15 @@
   "subscribeToOurCrowdloanNews": "订阅我们的众贷新闻",
   "basicRewards": "基础奖励",
   "basicRewardsText": "在 Khala 的众贷中，通过众贷在 Kusama 插槽竞拍中支持 Khala 的每个 KSM 都将获得 100 PHA 的奖励（PHA：KSM = 100：1）。",
+  "process": "流程",
+  "processT1": "准备KSM",
+  "processC1": "如果您的KSM已抵押，请尽快将其取消绑定！ （至少在众筹开始前7天）。",
+  "processT2": "第二个插槽",
+  "processC2": "Khala Network 将在 Kusama 第二轮卡槽拍卖时开启众贷。届时，您可以在此页面上参加。",
+  "processT3": "Khala 获胜",
+  "processC3": "当Khala赢得一个插槽并成功运行为平行链时，奖励池中34％的PHA将立即释放到贡献者的地址。剩余的66％将在11个月内线性释放。",
+  "processT4": "解锁 KSM",
+  "processC4": "如果Khala获胜，则将在租赁期结束时（距离Khala胜出48周）解锁KSM。",
   "waysToSupport": "支持的方式",
   "crowdloanDappThisPage": "众贷 Dapp（本页面）",
   "toBeAnnounced": "待公布",
