--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -80,6 +80,15 @@
   "subscribeToOurCrowdloanNews": "Subscribe to our Crowdloan news",
   "basicRewards": "Basic Rewards",
   "basicRewardsText": "In Khala’s crowdloan, every KSM that supports Khala in the Kusama slot auction through the Crowdloan will be entitled to 100 PHA as rewards (PHA: KSM = 100:1).",
+  "referralRewards": "Referral Rewards",
+  "referralRewardsConnect": "Connect Kusama First",
+  "referralRewardsText": "There is an additional reward available for Referrals. If a Crowdloan participant invites an additional participant who makes an additional contribution, they will each receive an additional reward: an extra 0.5% on the additional contribution.",
+  "referralRewardsFirst": "First, you can Bond your referrals, when you help Khala to win the auction, you will get a additional reward equivalent to 0.5% of your support reward.",
+  "yourReferralsKusamaAddress": "Your referrals' Kusama Address",
+  "referralRewardsSecond": "Second, you can invite others to help Khala, if Khala wins, you will get an additional reward equivalent to 0.5% of your friend’s support reward. there is no limit to how many accounts you invite.",
+  "bond": "Bond",
+  "tweetToTellYourFriend": "Tweet to tell your friend",
+  "generateMyReferalLink": "Generate my referal link",
   "process": "Process",
   "processT1": "Prep your KSM",
   "processC1": "Unbond your KSM soon if they’re already bonded! (At least 7 days before the Crowdloan starts).",
