--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -80,6 +80,15 @@
   "subscribeToOurCrowdloanNews": "订阅我们的众贷新闻",
   "basicRewards": "基础奖励",
   "basicRewardsText": "在 Khala 的众贷中，通过众贷在 Kusama 插槽竞拍中支持 Khala 的每个 KSM 都将获得 100 PHA 的奖励（PHA：KSM = 100：1）。",
+  "referralRewards": "邀请奖励",
+  "referralRewardsConnect": "请先连接 Kusama",
+  "referralRewardsText": "邀请还有额外的奖励。如果众贷参与者邀请其他人参与贡献，他们将分别获得被邀请人支持奖励的 0.5％ 作为邀请奖励。",
+  "referralRewardsFirst": "首先，您可以绑定邀请者，当您帮助 Khala 赢得拍卖时，您将获得相当于您的支持奖励的0.5％的奖励。",
+  "yourReferralsKusamaAddress": "您邀请人的 Kusama 账号",
+  "bond": "绑定",
+  "referralRewardsSecond": "其次，您可以邀请您的他人来支持 Khala，如果 Khala 获胜，您将获得他们的支持奖励的 0.5％ 等值的奖励。您邀请多少个账户没有限制。",
+  "tweetToTellYourFriend": "发推告诉您的朋友",
+  "generateMyReferalLink": "生成我的邀请链接",
   "process": "流程",
   "processT1": "准备KSM",
   "processC1": "如果您的KSM已抵押，请尽快将其取消绑定！ （至少在众筹开始前7天）。",
