--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -89,6 +89,7 @@
   "bond": "Bond",
   "tweetToTellYourFriend": "Tweet to tell your friend",
   "generateMyReferalLink": "Generate my referal link",
+  "yourReferrerCannotBeYourself": "your referrer cannot be yourself",
   "process": "Process",
   "processT1": "Prep your KSM",
   "processC1": "Unbond your KSM soon if they’re already bonded! (At least 7 days before the Crowdloan starts).",
