--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -146,5 +146,8 @@
   "q15": "K-PHA 与 PHA 是什么关系？",
   "a15": "K-PHA 与 PHA 为同一种代币，可在 Phala 跨链桥上线后进行 1:1 兑换。由于部署在不同区块链网络，因此名称不同。",
   "q16": "我可以在哪里追踪众贷情况呢？",
-  "a16": "众贷开始后，你可以在本面板中看到 Khala 的众贷数量、众贷人数、总获得奖励、当前竞拍情况等信息。"
+  "a16": "众贷开始后，你可以在本面板中看到 Khala 的众贷数量、众贷人数、总获得奖励、当前竞拍情况等信息。",
+  "alert": "提示",
+  "install": "安装",
+  "pleaseInstallText": "请先安装 polkadot 插件，并重启浏览器"
 }
